fix: default database 1. reenables default schedule-events and schedule-days tables
fix: overflowed popover
1. adds left and right values for space around popovers
2. adds responsive width to avoid overflow

fix: bug report copy to clipboard
1. fixes issue where copied email is 'undefined'

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1940,7 +1940,11 @@ p.small-text {
 .popover {
   /* display: flex; */
   flex-direction: column;
-  width: 64rem;
+  max-width: 64rem;
+  width: auto;
+  left: 2rem;
+  right: 2rem;
+  min-width: auto;
   padding: 2rem;
   align-items: flex-start;
   border-radius: var(--radius-more-rounded);
